Compiler/tests/good/Functions/02_function.rs
fn x(a : i32) -> i32 {
    return a + 3;
}

fn main(){
    println!(x(4));
    return
}