Compiler/tests/bad/Ownership/04_ownership.rs
fn main()
{
  let mut x : i32 = 4;
  let x1 : &mut i32 = &mut x;
  
  println!(x);

  return;
}
